# rv1126_rknn

./: CMakeLists.txt  README.md  RV_RKNN.cpp  RV_RKNN.h  RV_VideoCapture.cpp  RV_VideoCapture.h  main.cpp  vi_rtsp.c  write_jpeg.c
